Alternative steps UC8

--- a/Verslagen/1e verslag/template.tex
+++ b/Verslagen/1e verslag/template.tex
@@ -288,7 +288,11 @@ The user logs into his Application Provider dashboard and request an overview th
 	\item The Online Service notifies the user that the application is activated.
     \end{enumerate}
 
-    \item \textbf{Alternative scenarios:} /
+    \item \textbf{Alternative scenarios:} 
+      \begin{enumerate}
+ 	\item [5b.] All hardware needed is already available to the Customer Organization, resume at step 9.
+        \item [7b.] The Infrastructure owner rejected the request, the user is notified of the rejection.
+      \end{enumerate}
 \end{itemize}
 
 
