spelling and UK style

--- a/Verslagen/1e verslag/template.tex
+++ b/Verslagen/1e verslag/template.tex
@@ -290,8 +290,8 @@ The user logs into his Application Provider dashboard and request an overview th
 
     \item \textbf{Alternative scenarios:} 
       \begin{enumerate}
- 	\item [5b.] All hardware needed is already available to the Customer Organization, resume at step 9.
-        \item [7b.] The Infrastructure owner rejected the request, the user is notified of the rejection.
+ 	\item [5b.] All hardware needed is already available to the customer organisation, resume at step 9.
+        \item [7b.] The infrastructure owner rejected the request, the user is notified of the rejection.
       \end{enumerate}
 \end{itemize}
 
