update to report

--- a/Verslagen/2e verslag/template.tex
+++ b/Verslagen/2e verslag/template.tex
@@ -30,7 +30,7 @@
 \chapter{Attribute-driven design documentation}\label{sec:add}
 \section{Decomposition 1: SIOTIP (M1, U2, UC6, UC8, UC13)}
 \subsection{Module to decompose}
-In this run we decompose \texttt{SIOTIP}.
+In this run we decompose \texttt{SIoTIP}.
 
 \subsection{Selected architectural drivers}
 The non-functional drivers for this decomposition are:
