--- a/Verslagen/2e verslag/template.tex
+++ b/Verslagen/2e verslag/template.tex
@@ -37,19 +37,19 @@ The non-functional drivers for this decomposition are:
 
 \begin{itemize}
 	\item \emph{M1}: Integrate new sensor or actuator manufacturer
-	\item \emph{U2}: Easy installation
 \end{itemize}
 
 The related functional drivers are:
 
 \begin{itemize}
-	\item \emph{UC6}: Insert a pluggable device into a mote
 	\item \emph{UC8}: Initialise a pluggable device
-	\item \emph{UC13}: Configure a pluggable device
+	\item \emph{UC9}: Configure pluggable device access rights
+	\item \emph{UC10}: Consult and configure the topology
+	\item \emph{UC13}: Configure pluggable device
 \end{itemize}
 
 \paragraph{Rationale}
-\todo{M1 en U2 zijn beide high priority + ze gaan beide over het installeren van nieuwe sensoren. U2 gaat meer over de gebruiksvriendelijkheid, terwijl M1 echt gaat over een nieuwe sensor van een andere fabrikant. M1 wordt zeer moeilijk zonder U2.}
+
 
 \subsection{Architectural design}
 \paragraph{Topic}
